--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Fourth Year Ph.D Student"
   location         : "Beijing, China"
-  employer         : "Peking University"
+  employer         : "Wangxuan Institute of Computer Technology, Peking University"
   URI              : "http://39.108.48.32/mipl/news/news.php?id=CHcuizhenyu"# URL
   email            : "cuizhenyu@stu.pku.edu.cn" 
 
