--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ author:
   avatar           : "cuizhenyu.jpg"
   name             : "Cui Zhenyu"
   pronouns         : # example: "she/her"  
-  bio              : "Fourth Year Ph.D Student"
+  bio              : "Fourth Year Ph.D Student in Wangxuan Institute of Computer Technology"
   location         : "Beijing, China"
-  employer         : "Wangxuan Institute of Computer Technology, Peking University"
+  employer         : "Peking University"
   URI              : "http://39.108.48.32/mipl/news/news.php?id=CHcuizhenyu"# URL
   email            : "cuizhenyu@stu.pku.edu.cn" 
 
