--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "cuizhenyu.jpg"
   name             : "Cui Zhenyu"
   pronouns         : # example: "she/her"  
-  bio              : "Fourth Year Ph.D Student in Wangxuan Institute of Computer Technology"
+  bio              : "Ph.D Student in Wangxuan Institute of Computer Technology"
   location         : "Beijing, China"
   employer         : "Peking University"
   URI              : "http://39.108.48.32/mipl/news/news.php?id=CHcuizhenyu"# URL
